--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <h1>Welcome To my Web Page!</h1>
+    <p> gfeuifldnf;oj</p>
     <h2>About me!</h2>
-    <p>This is Divyanshi Bansal from Btech CSE , sec C . This is my first assignment of Full Stack subject
+    <p>
+       
+        This is Divyanshi Bansal from Btech CSE , sec C . This is my first assignment of Full Stack subject
         in which i created a page and write about myself , but i want to share my views on this subject ,
         i.e. it's too cool to learn WebD , create own pages and learn HTML , CSS , JS and that's all we learn in full stack .
-        THAT's AMAZING !!! .</p>
+        THAT's AMAZING !!!.
+    
+    </p>
 </body>
 </html>
