--- a/Practical-3.html
+++ b/Practical-3.html
@@ -1,2 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Practical-3</title>
+    <link rel="stylesheet" href="index1.css">
+</head>
+<body>
+    <h1>Practical-3: Create a web page showing a basic html structure using character Entities and span Tag.</h1>
+
+    <h2>Output</h2>
+    <p>
+        &lt;!DOCTYPE html&gt;<br>
+        &lt;html lang="en"&gt;<br>
+        &lt;head&gt;<br>
+            &lt;meta charset="UTF-8"&gt;<br>
+            &lt;meta name="viewport" content="width=device-width,initial-scale=1.0"&gt;<br>
+            &lt;title&gt;Document&lt;/title&gt;<br>
+        &lt;/head&gt;<br>
+        &lt;body&gt;<br>
+        &lt;!-- this is html comment --&gt;<br>
+        Write your content here......<br>
+        &lt;/body&gt;<br>
+        &lt;/html&gt;
+    </p>
+</body>
+</html>
