--- a/Practical-3.html
+++ b/Practical-3.html
@@ -4,25 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Practical-3</title>
-    <link rel="stylesheet" href="index1.css">
+    <link rel="stylesheet" href="Practical-3.css"> 
+    <style>
+        .red{
+            color:red;
+        }
+        .blue{
+            color:blue;
+        }
+        .green{
+            color:green;
+        }
+    </style>
 </head>
 <body>
     <h1>Practical-3: Create a web page showing a basic html structure using character Entities and span Tag.</h1>
 
     <h2>Output</h2>
     <p>
-        &lt;!DOCTYPE html&gt;<br>
-        &lt;html lang="en"&gt;<br>
-        &lt;head&gt;<br>
-            &lt;meta charset="UTF-8"&gt;<br>
-            &lt;meta name="viewport" content="width=device-width,initial-scale=1.0"&gt;<br>
-            &lt;title&gt;Document&lt;/title&gt;<br>
-        &lt;/head&gt;<br>
-        &lt;body&gt;<br>
-        &lt;!-- this is html comment --&gt;<br>
-        Write your content here......<br>
-        &lt;/body&gt;<br>
-        &lt;/html&gt;
+    <pre>
+    &lt;!DOCTYPE <span class='red'>html</span>&gt;
+    &lt;html <span class="red">lang</span>=<span class="blue">"en"</span>&gt;
+    &lt;head&gt;
+        &lt;meta <span class="red">charset</span>=<span class="blue">"UTF-8"</span>&gt;
+        &lt;meta <span class="red">name</span>=<span class="blue">"viewport"</span> <span class="red">content</span>=<span class="blue">"width=device-width,initial-scale=1.0"</span>&gt;
+        &lt;title&gt;Document&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+    <span class='green'>&lt;!-- this is html comment --&gt;</span>
+    Write your content here......
+    &lt;/body&gt;
+    &lt;/html&gt;
+    </pre>
     </p>
 </body>
 </html>
