--- a/Practical-3.html
+++ b/Practical-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Practical-3</title>
-    <link rel="stylesheet" href="Practical-3.css"> 
+    <!-- <link rel="stylesheet" href="Practical-3.css">  -->
     <style>
         .red{
             color:red;
@@ -14,6 +14,9 @@
         }
         .green{
             color:green;
+        }
+        h1{
+            color:red;
         }
     </style>
 </head>
